Added option to delete all messages

--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
     },
     "permissions": [
       "https://www.linkedin.com/*",
-      "storage"
+      "storage",
+      "activeTab"
     ]
   }
