Restructured code, added sass

--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,28 @@
-{
-    "manifest_version": 2,
-    "name": "LinkOff - Clean your LinkedIn",
-    "short_name": "LinkOff",
-    "author": "Noah Jelich",
-    "version": "0.3",
-    "description": "LinkOff cleans and customizes LinkedIn. It filters out the junk, leaving behind the posts and page elements that you want to see.",
-    "background": {
-      "scripts":["background.js"]
-    },
-    "icons": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    },
-    "content_scripts": [
-      {
-        "matches": [
-          "https://www.linkedin.com/*"
-        ],
-        "js": ["content.js"],
-        "css": ["content.css"],
-        "run_at": "document_end"
-      }
+3 {
+  "manifest_version": 2,
+  "name": "LinkOff - LinkedIn Filter and Customizer",
+  "short_name": "LinkOff",
+  "author": "Noah Jelich",
+  "version": "0.",
+  "description": "LinkOff cleans and customizes LinkedIn. It filters out the junk, leaving behind the posts and page elements that you want to see.",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "content_scripts": [{
+    "matches": [
+      "https://www.linkedin.com/*"
     ],
-    "browser_action": {
-      "default_popup": "popup/popup.html"
-    },
-    "permissions": [
-      "https://www.linkedin.com/*",
-      "storage"
-    ]
-  }
+    "js": ["content/content.js"],
+    "css": ["content/content.css"],
+    "run_at": "document_end"
+  }],
+  "browser_action": {
+    "default_popup": "popup/popup.html"
+  },
+  "permissions": [
+    "https://www.linkedin.com/*",
+    "storage"
+  ]
+}
