--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,5 @@
   "browser_action": {
     "default_popup": "popup/popup.html"
   },
-  "permissions": ["https://www.linkedin.com/*", "storage"],
-  "web_accessible_resources": ["icons/select-all.png"]
+  "permissions": ["https://www.linkedin.com/*", "storage"]
 }
