ci(): change release to use cron on main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 name: CI / CD
 
 on:
-  push:
-    branches: [ release ]
-  pull_request:
-    branches: [ release ]
+  schedule:
+    - cron: '0 4 * * 4'
   workflow_dispatch:
 
 jobs:
