perf(): added exclusions to release zip

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-            
+
       - name: Gets semantic release info
         id: semantic_release_info
         uses: njelich/action-semantic-release-info@v1.2
         env:
           GITHUB_TOKEN: ${{ github.token }}
-      
+
       - name: Update version in manifest.json
         if: steps.semantic_release_info.outputs.version != ''
         run: bash .github/workflows/updateVersionInManifest.sh ${{ steps.semantic_release_info.outputs.version }}
-      
+
       - name: Commit files
         if: steps.semantic_release_info.outputs.version != ''
         run: |
@@ -29,7 +29,7 @@ jobs:
           git add -A
           git commit -m "docs(): bumping release ${{ steps.semantic_release_info.outputs.git_tag }}"
           git tag ${{ steps.semantic_release_info.outputs.git_tag }}
-          
+
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         if: steps.semantic_release_info.outputs.version != ''
@@ -37,15 +37,15 @@ jobs:
           branch: ${{ github.ref }}
           github_token: ${{ github.token }}
           tags: true
-          
+
       - name: Archive extension files
         uses: thedoctor0/zip-release@master
         if: steps.semantic_release_info.outputs.version != ''
         with:
           type: 'zip'
           filename: 'LinkOff.zip'
-          exclusions: '*.git* /*node_modules/* /*assets/* README.md package*'
-          
+          exclusions: '*.git* /*node_modules/* /*assets/* README.md package* .* yarn.lock'
+
       - name: Create release
         uses: ncipollo/release-action@v1
         if: steps.semantic_release_info.outputs.version != ''
@@ -53,5 +53,5 @@ jobs:
           tag: ${{ steps.semantic_release_info.outputs.git_tag }}
           name: ${{ steps.semantic_release_info.outputs.git_tag }}
           body: ${{ steps.semantic_release_info.outputs.notes }}
-          artifacts: "LinkOff.zip"
+          artifacts: 'LinkOff.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
