fix(): rename due to DMCA from LinkedIn

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "LinkOff - LinkedIn Filter and Customizer",
+  "name": "LinkOff - Filter and Customizer for LinkedIn™",
   "short_name": "LinkOff",
   "author": "Noah Jelich",
   "version": "1.4.1",
