--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "css-build": "node-sass --omit-source-map-url popup/popup.scss popup/popup.css",
     "css-watch": "npm run css-build -- --watch",
-    "start": "npm run css-watch"
+    "start": "npm run css-watch",
+    "lint": "eslint . --ignore-path .eslintignore"
   },
   "devDependencies": {
     "@creativebulma/bulma-divider": "^1.1.0",
