refactor: :recycle: Add code splitting and restructurate code accordingly

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "browser": true
   },
   "parserOptions": {
-    "ecmaVersion": 8
+    "ecmaVersion": 2020,
+    "sourceType": "module"
   },
   "globals": {
     "chrome": true,
