feat(Gentle mode): :sparkles: Use a tooltip to explain gentle mode more clearly

--- a/manifest.json
+++ b/manifest.json
@@ -22,22 +22,14 @@
   },
   "background": {
     "service_worker": "src/service_worker.js",
-    "scripts": [
-      "src/service_worker.js"
-    ],
+    "scripts": ["src/service_worker.js"],
     "type": "module"
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://www.linkedin.com/*"
-      ],
-      "js": [
-        "src/content/content.js"
-      ],
-      "css": [
-        "src/content/content.css"
-      ],
+      "matches": ["https://www.linkedin.com/*"],
+      "js": ["src/content/content.js"],
+      "css": ["src/content/content.css"],
       "run_at": "document_end"
     }
   ],
@@ -54,18 +46,12 @@
         "/src/features/misc.js",
         "/src/features/message.js"
       ],
-      "matches": [
-        "https://www.linkedin.com/*"
-      ]
+      "matches": ["https://www.linkedin.com/*"]
     }
   ],
   "action": {
     "default_popup": "src/popup/popup.html"
   },
-  "host_permissions": [
-    "https://www.linkedin.com/*"
-  ],
-  "permissions": [
-    "storage"
-  ]
+  "host_permissions": ["https://www.linkedin.com/*"],
+  "permissions": ["storage"]
 }
